--- a/03-projetos-integradores/01-landing-page-flex-turismo/index.html
+++ b/03-projetos-integradores/01-landing-page-flex-turismo/index.html
@@ -26,14 +26,14 @@
         <div class="texto-apresentacao">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="">Saiba Mais!</a>
+            <a href="" class="btn">Saiba Mais!</a>
         </div>
         <div>
             <div><img src="./images/0-main.png" alt="banner de apresentação"></div>
         </div>
     </div>
 
-    <div clas="flex-container" id="quem-somos">
+    <div class="flex-container" id="quem-somos">
         <div>
             <h2>Quem somos</h2>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -46,73 +46,84 @@
         </div>
     </div>
 
-    <div clas="flex-container">
-        <div>
-            <h2>Serviços</h2>
-        </div>
-
-        <div>
+    <div class="container-externo">
+        <div clas="flex-container" id="servicos">
             <div>
-                <div><img src="./images/icon-2.png" alt="hospedagens"></div>
-                <p>Hospedagens</p>
-                <a href="#">Comprar Agora</a>
+                <h2>Serviços</h2>
             </div>
 
-            <div>
-                <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
-                <p>Pacotes de viagens</p>
-                <a href="#">Comprar Agora</a>
-            </div>
+            <div class="list-servicos">
+                <div class="items-servico">
+                    <div><img src="./images/icon-2.png" alt="hospedagens"></div>
+                    <p>Hospedagens</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
 
-            <div>
-                <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
-                <p>Roteiros personalizados</p>
-                <a href="#">Comprar Agora</a>
-            </div>
+                <div class="items-servico">
+                    <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
+                    <p>Pacotes de viagens</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
 
+                <div class="items-servico">
+                    <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
+                    <p>Roteiros personalizados</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
+
+            </div>
         </div>
     </div>
 
-    <div clas="flex-container">
-        <div>
-            <h3>Plano 2</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
-        </div>
 
+    <div class="flex-container" id="planos">
         <div>
-            <h3>Plano 2</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-                <li>Roteiro de trilhas</li>
-                <li>Serviço personalizado</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
+            <h2>Planos</h2>
         </div>
+        <div class="list-planos">
+            <div class="items-planos">
+                <h3>Plano 1</h3>
+                <ul>
+                    <li>Suporte 24h</li>
+                    <li>Serviços de quarto</li>
+                    <li>Guia turístico</li>
+                </ul>
+                <a href="#" class="btn">Saiba Mais!</a>
+            </div>
 
-        <div>
-            <h3>Plano 3</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-                <li>Roteiro de trilhas</li>
-                <li>Serviço personalizado</li>
-                <li>Área Vip</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
+            <div class="items-planos">
+                <h3>Plano 2</h3>
+                <br>
+                <ul>
+                    <li>Suporte 24h</li>
+                    <li>Serviços de quarto</li>
+                    <li>Guia turístico</li>
+                    <li>Roteiro de trilhas</li>
+                </ul>
+                <a href="#" class="btn">Saiba Mais!</a>
+            </div>
+
+            <div class="items-planos">
+                <h3>Plano 3</h3>
+                <br>
+                <ul>
+                    <li>Suporte 24h</li>
+                    <li>Serviços de quarto</li>
+                    <li>Guia turístico</li>
+                    <li>Roteiro de trilhas</li>
+                    <li>Serviço personalizado</li>
+                    <li>Área Vip</li>
+                </ul>
+                <a href="#" class="btn">Saiba Mais!</a>
+            </div>
         </div>
     </div>
 
-    <footer clas="flex-container">
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Seu nome aqui dev</p>
+    <footer>
+        <div class="flex-container footer">
+            <p>&copy; 2021 CSS Flexbox</p>
+            <p>Desenvolvido por: Marx Santos</p>
+        </div>
     </footer>
 </body>
 
